# hermes-shim-http

./: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish-npm.yml
docs/architecture/: hermes-integration.md
docs/maintainers/: releasing.md
docs/releases/: v0.1.7.md
hermes_shim_http/: hermes_mcp.py  inflight.py  live_child_pool.py  logging_utils.py  models.py  parsing.py  prompting.py  runner.py  server.py  session_cache.py  silence.py  single_child.py  slash_commands.py  telemetry.py  token_usage.py  tool_translation.py
tests/: fake_cli.py  launcher.test.js  test_cli_http_shim.py  test_cli_http_shim_parsing.py  test_cli_http_shim_server.py  test_compaction.py  test_hermes_mcp_cache.py  test_idempotency.py  test_live_child_pool.py  test_logging_utils.py  test_session_cache_sqlite.py  test_single_child_lock.py  test_slash_commands.py  test_token_usage.py  test_tool_translation.py  test_version_metadata.py
